--- a/package.json
+++ b/package.json
@@ -3,27 +3,39 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "docs": "typedoc ./src --theme markdown --platform docusaurus --name 'My API' --readme none --out ./docs/myapi",
+    "docusaurus": "docusaurus",
     "dev": "vite",
-    "build": "vite build",
     "preview": "vite preview",
     "lint:js": "eslint --ext .js,.jsx,.ts,.tsx ./src",
     "lint:prettier": "prettier -c --write \"src/**/*\"",
     "lint:js:fix": "eslint --ext .js,.jsx,.ts,.tsx ./src --fix",
     "prepare": "husky install",
     "lint-staged": "lint-staged",
-    "doc": "typedoc --tsconfig tsconfig.json --options typedoc.json"
+    "doc": "typedoc --tsconfig tsconfig.json --options typedoc.json",
+    "start": "docusaurus start",
+    "build": "docusaurus build"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": "eslint --ext .js,.jsx,.ts,.tsx",
     "**/*.{js,jsx,tsx,ts,css,md,json}": "prettier --ignore-unknown --write"
   },
   "dependencies": {
+    "@docusaurus/core": "2.2.0",
+    "@docusaurus/preset-classic": "2.2.0",
+    "@mdx-js/react": "^1.6.22",
+    "clsx": "^1.2.1",
+    "docusaurus-plugin-typedoc": "*",
+    "prism-react-renderer": "^1.3.5",
+    "typedoc-plugin-markdown": "*",
     "@originjs/vite-plugin-federation": "^1.1.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-use-websocket": "3.0.0"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-use-websocket": "3.0.0",
+    "classnames": "^2.2.6"
   },
   "devDependencies": {
+    "@docusaurus/module-type-aliases": "2.2.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
@@ -36,7 +48,7 @@
     "jsdoc": "^4.0.2",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
-    "typedoc": "^0.24.7",
+    "typedoc": "^0.24.2",
     "typescript": "4.7.4",
     "vite": "^3.1.0"
   },
