--- a/.docusaurus/docusaurus-plugin-content-docs/default/site-docs-api-interfaces-easy-form-dialog-props-md-6b5.json
+++ b/.docusaurus/docusaurus-plugin-content-docs/default/site-docs-api-interfaces-easy-form-dialog-props-md-6b5.json
@@ -18,5 +18,14 @@
     "sidebar_label": "EasyFormDialogProps",
     "sidebar_position": 0,
     "custom_edit_url": null
+  },
+  "sidebar": "tutorialSidebar",
+  "previous": {
+    "title": "CardAProps",
+    "permalink": "/docs/api/interfaces/CardAProps"
+  },
+  "next": {
+    "title": "User",
+    "permalink": "/docs/api/interfaces/User"
   }
 }
