--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "@docusaurus/core": "2.2.0",
     "@docusaurus/preset-classic": "2.2.0",
     "@mdx-js/react": "^1.6.22",
+    "@originjs/vite-plugin-federation": "^1.1.10",
+    "classnames": "^2.2.6",
     "clsx": "^1.2.1",
     "docusaurus-plugin-typedoc": "*",
     "prism-react-renderer": "^1.3.5",
-    "typedoc-plugin-markdown": "*",
-    "@originjs/vite-plugin-federation": "^1.1.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-use-websocket": "3.0.0",
-    "classnames": "^2.2.6"
+    "typedoc-plugin-markdown": "^3.15.3"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.2.0",
